# Clouds-Everywhere

./: .gitignore  LICENSE  README.md  __init__.py  aoi.py  coverage.py  demo.ipynb  demo2.ipynb  models.py  pyproject.toml  query.py  requirements.txt  search.py  setup.py  viz.py
clouds_everywhere/: __init__.py  coverage.py  query.py  search.py  viz.py
clouds_everywhere/providers/: __init__.py  landsat.py  modis.py  sentinel2.py  sentinel3.py  utils.py
src/: __init__.py  landsat.py  modis.py  sentinel2.py  utils.py
tests/: conftest.py  test_aoi.py  test_query.py  test_search_coverage.py
