[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clouds-everywhere"
version = "0.1.0"
description = "Check satellite image availability and tile coverage by cloud percentage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
    "seaborn",
    "folium",
    "geopandas",
    "pyproj",
    "shapely",
]

[project.optional-dependencies]
dev = ["jupyter", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.setuptools.packages.find]
where = ["."]
