[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clouds-everywhere"
version = "0.1.0"
description = "Check satellite imagery availability over any AOI by cloud cover — and find the data gaps"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mohammad Anwar", email = "mohammadanwarx99@gmail.com" },
]
keywords = [
    "satellite", "remote-sensing", "sentinel-2", "landsat", "modis",
    "cloud-cover", "stac", "earth-observation", "gis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
    "seaborn",
    "folium",
    "geopandas",
    "pyproj",
    "shapely",
]

[project.urls]
Homepage = "https://github.com/mohammadanwarx/Clouds-Everywhere"
Repository = "https://github.com/mohammadanwarx/Clouds-Everywhere"
Issues = "https://github.com/mohammadanwarx/Clouds-Everywhere/issues"

[project.optional-dependencies]
dev = ["jupyter", "pytest", "build", "twine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.setuptools.packages.find]
include = ["clouds_everywhere*"]
